--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -367,7 +367,9 @@
 .text {
     position:absolute;
     top:645px;
-    left:670px;
+    left:660px;
+    font-family: Arial;
+    font-weight: 200;
 }
 
 
